<resources>
    <string name="app_name">dibApp</string>
    <string name="action_sign_in">Sign in</string>
    <string name="rememberMeToggleString">Remember me</string>
    <string name="passwordForgotLinkString">Forgot password</string>
    <string name="emailPromptHint">Email</string>
    <string name="passwordPromptHint">Password</string>
    <string name="rememberMeToggleHint">Keep me logged</string>
    <string name="forgotPasswordLinkHint">Retrieve credentials</string>
    <string name="action_register">Register</string>
    <string name="text_or">or</string>
    <string name="edit">edit</string>
    <string name="ssnPromptHint">Serial Number</string>
    <string name="namePromptHint">Name</string>
    <string name="confirmPasswordPromptHint">Confirm password</string>
    <string name="surnamePromptHint">Surname</string>
    <string name="alreadyRegistered">Already registered?</string>
    <string name="inputCannotBeEmpty">cannot be empty</string>
    <string name="passwordAndConfirmDoesNotMatch">Password and confirm password does not match.</string>
    <string name="emailNotValid">Email is not valid.</string>
    <string name="logoContentDescription">LogoDescription</string>
    <string name="dashboard_menu_settings">Settings</string>
    <string name="dashboard_menu_exit">Logout</string>
    <string name="dashboard_menu_search">Search</string>
    <string name="logout_double_back_confirm">Please click BACK again to exit.</string>
    <string name="logout_dialog_confirm">Are you sure you want to exit?</string>
    <string name="logout_dialog_confirm_yes">Yes</string>
    <string name="logout_dialog_confirm_no">No</string>
    <string name="contentDescriptionLogo">Logo</string>
    <string name="roleToggleString">Role</string>
    <string name="teacherRoleString">Teacher</string>
    <string name="studentRoleString">Student</string>
    <string name="selectRoleText">Role</string>
    <string name="selectDegreecourseText">Degree course</string>
    <string name="degreecourseSelectionErrorText">Select your degree course</string>
    <string name="roleSelectionErrorText">Select your role</string>
    <string name="dashboard_menu_user_profile">Profile</string>
    <string name="title_activity_settings">Settings</string>
    <string name="lesson_evaluated_string">Lesson already evaluated.</string>
    <string name="lesson_in_progress">Lesson in progress.</string>
    <string name="lesson_not_in_progress_text">Lesson not in progress.</string>
    <string name="from">From: </string>
    <string name="to"> to: </string>
    <string name="attendance">Students registered: </string>
    <string name="sort_ascend">Sort Ascending</string>
    <string name="sort_descend">Sort Descending</string>
    <string name="sort_rate">Sort by Rate</string>
    <string name="sort_time">Sort by Insert Time</string>
    <string name="daily_attendance">Daily attendance</string>
    <string name="review_per_lesson">Review per lesson</string>
    <string name="name">Name: </string>
    <string name="surname">Surname: </string>
    <string name="role">Role: </string>


    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails</string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="title_exam_list">Exams</string>
    <string name="title_exam_detail">Exam Detail</string>
    <string name="examListActivityTitle">Exams list</string>
    <string name="profileActivityTitle">Profile</string>
    <string name="partecipateButtonText">Enter</string>
    <string name="partecipateUndoButtonText">Leave</string>
    <string name="evaluateButtonText">Evaluate</string>
    <string name="informationButton">Informations</string>
    <string name="title_activity_profile">Profile</string>

    <string name="geofence_insufficient_permissions_title">Insufficient permissions.</string>
    <string name="geofence_insufficient_permissions_message">It won\'t be possible to register your presence prior to accepting the required permissions.</string>
    <string name="unknown_geofence_error">Geofence unknown error</string>
    <string name="geofence_not_available">Geofence is not available</string>
    <string name="geofence_too_many_geofences">There are too many registered geofences.</string>
    <string name="geofence_too_many_pending_intents">There are too many geofence intents.</string>
    <string name="geofence_transition_invalid_type">Geofence transition invalid type</string>
    <string name="geofence_transition_enter">Stepping into the geofence.</string>
    <string name="geofence_transition_left">Not in the geofence.</string>
    <string name="geofence_transition_dwelling">Dwelling in the geofence</string>
    <string name="unknown_geofence_transition">Geofence - unknown transition.</string>
    <string name="geofence_permissions_ask">Allow access to your location.</string>
    <string name="geofence_is_up">Geofence up</string>
    <string name="lesson_list_empty_text">No lessons scheduled for today.</string>
    <string name="noClassDescriptionSetText">No description set for this class.</string>
    <string name="lessonInProgress">Lesson in progress…</string>
    <string name="lessonNotInProgress">No lesson at this time.</string>
    <string name="classYearText">Year</string>
    <string name="classSemesterText">Semester</string>
    <string name="lessonStartAt">Start</string>
    <string name="lessonDate">Date</string>
    <string name="lessonEndAt">End</string>
    <string name="noSummarySetText">No summary set.</string>
    <string name="classCodeText">Code</string>
    <string name="noLessonDescriptionSetText">No description has been set for this lesson.</string>

    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="questionButtonText">Ask a question</string>
    <string name="ask_a_question_text">Ask a question</string>
    <string name="cancel_button_text">Cancel</string>
    <string name="submit_button_text">Submit</string>
    <string name="question_sent">Question sent.</string>
    <string name="question_not_sent">Question not sent.</string>
    <string name="attendance_set">Attendance is set.</string>
    <string name="attendance_not_set">Attendance not set.</string>
    <string name="review_sent">Review sent.</string>
    <string name="review_not_sent">Review not sent.</string>
    <string name="review_summary_text">Summary</string>
    <string name="review_description_text">Review</string>
    <string name="question_write_yours_here_text">Write your question here.</string>
    <string name="no_geofence_permission_text">Geofence permissions are not granted.</string>
    <string name="user_registration_ok">The user has been registered.</string>
    <string name="user_registration_not_ok">The user has not been registered.</string>
    <string name="user_login_ok">Login done.</string>
    <string name="user_login_not_ok">Login went wrong.</string>
    <string name="question_button_test">Questions</string>
    <string name="review_button_text">Reviews</string>
    <string name="lesson_of">Lesson of</string>
    <string name="average_text_string">Average rating</string>
    <string name="total_member_text_string">Number of participants</string>
    <string name="distribution_text_string">Attendance Distribution</string>
    <string name="question_title">Questions</string>
    <string name="review_title">Review</string>
    <string name="class_no_lesson_scheduled_text">No lessons scheduled for this class.</string>
    <string name="lesson_today_schedule">Lessons of </string>
    <string name="lesson_no_lesson_scheduled_text">No lessons scheduled for today.</string>
    <string name="title_activity_main2" translatable="false">Main2Activity</string>
    <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
    <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>
    <string name="nav_header_title" translatable="false">Android Studio</string>
    <string name="nav_header_subtitle" translatable="false">android.studio@android.com</string>
    <string name="nav_header_desc" translatable="false">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home" translatable="false">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow" translatable="false">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="lesson_today_schedule_empty_text">No lessons scheduled for today.</string>
    <string name="attendance_already_set">Attendance is already set for another lesson.</string>
    <string name="question_like_button_text">Like</string>
    <string name="question_dislike_button_text">Dislike</string>
    <string name="no_question_asked_text">No question asked yet.</string>
    <string name="statistics_text">Statistics</string>
    <string name="question_add_text">Add question</string>
    <string name="no_question_text">No questions</string>
    <string name="no_review_text">No reviews</string>
    <string name="geofence_permission_granted">Permissions granted</string>
    <string name="geofence_permission_not_granted">Permissions not granted, geofence features disabled.</string>
    <string name="field">Field</string>
    <string name="degreeCourse">"Degree course: "</string>


</resources>
