<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/exam_detail_fragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ExamDetailActivity"
    tools:ignore="MergeRootFrame">


    <Button
        android:id="@+id/partecipate"
        android:layout_width="0dp"
        android:layout_height="339dp"
        android:text="@string/partecipateButtonText"
        app:layout_constraintEnd_toStartOf="@id/evaluate"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/evaluate"
        android:layout_width="0dp"
        android:layout_height="339dp"
        android:text="@string/evaluateButtonText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/partecipate"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/history"
        android:layout_width="0dp"
        android:layout_height="339dp"
        android:text="@string/historyButtonText"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/information"
        app:layout_constraintStart_toStartOf="@id/partecipate"
        app:layout_constraintTop_toBottomOf="@id/evaluate" />

    <Button
        android:id="@+id/information"
        android:layout_width="0dp"
        android:layout_height="339dp"
        android:text="@string/informationButton"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@id/evaluate"
        app:layout_constraintStart_toEndOf="@id/history"
        app:layout_constraintTop_toBottomOf="@id/evaluate" />

</androidx.constraintlayout.widget.ConstraintLayout>