<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/questionContainer"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/questionTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/text_margin"
        android:layout_marginEnd="20dp"
        android:layout_weight="1"
        android:gravity="center"
        android:labelFor="@id/questionButton"
        android:padding="@dimen/textDefaultPadding"
        android:text="@string/questionButtonText"
        app:layout_constraintBottom_toTopOf="@id/questionButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/questionButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/text_margin"
        android:layout_marginTop="16dp"
        android:layout_weight="4"
        android:autofillHints=""
        android:ems="10"
        android:gravity="start|top"
        android:hint="@string/question_write_yours_here_text"
        android:inputType="textMultiLine"
        android:lines="5"
        android:padding="@dimen/textDefaultPadding"
        app:layout_constraintBottom_toTopOf="@+id/cancelQuestion"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/questionTitle"
        tools:targetApi="o" />

    <Button
        android:id="@+id/submitQuestion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/text_margin"
        android:padding="@dimen/textDefaultPadding"
        android:text="@string/submit_button_text"
        app:layout_constraintBottom_toBottomOf="@+id/cancelQuestion"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/cancelQuestion"
        app:layout_constraintTop_toTopOf="@+id/cancelQuestion" />

    <Button
        android:id="@+id/cancelQuestion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/text_margin"
        android:padding="@dimen/textDefaultPadding"
        android:text="@string/cancel_button_text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/submitQuestion"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/questionButton" />


</androidx.constraintlayout.widget.ConstraintLayout>
