<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="bottom|center_horizontal"
    android:layout_margin="@dimen/text_margin"
    android:background="@drawable/border"
    android:orientation="vertical"
    android:padding="@dimen/textDefaultPadding">

    <RatingBar
        android:id="@+id/reviewRating"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:isIndicator="false"
        android:numStars="5"
        android:progressTint="?attr/colorAccent"
        android:stepSize="1"
        app:layout_constraintBottom_toTopOf="@id/reviewSummary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/reviewSummary"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:hint="@string/review_summary_text"
        android:inputType="textMultiLine|text"
        android:padding="@dimen/text_margin"
        app:layout_constraintBottom_toTopOf="@id/reviewText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/reviewRating"
        tools:targetApi="o" />

    <EditText
        android:id="@+id/reviewText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:gravity="clip_vertical"
        android:hint="@string/review_description_text"
        android:inputType="textMultiLine|text"
        android:padding="@dimen/text_margin"
        app:layout_constraintBottom_toTopOf="@id/cancelReview"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/reviewSummary"
        tools:targetApi="o" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="horizontal"
        android:padding="@dimen/textDefaultPadding">

        <Button
            android:id="@+id/cancelReview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cancel_button_text"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/submitReview"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/submitReview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/submit_button_text"
            app:layout_constraintBottom_toBottomOf="@+id/cancelReview"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/cancelReview"
            app:layout_constraintTop_toTopOf="@+id/cancelReview" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</LinearLayout>
